# shippy1984

./: .gitignore  CMakeLists.txt  GNUmakefile  NOTES.txt  externs.h  font.c  font.h  path.c  path.h  shipall.c  shippy.c  shippy.desktop  shippy.h  shippy.metainfo.xml  shippy.spec  shipsdl.c  shipsdl2.c
data/: cutscenes.txt  score.xm  scores.lst
docs/: classic.html  manual.html
